--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
   
   
-    <title>Clicky Game</title>
+    <title> Country Click Game </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
